dev/09-frontends/mqtt-topic-tree/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontends
  labels:
    name: frontends
    environment: dev
