dev/09-frontends/mqtt-topic-tree/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-topic-tree
  namespace: frontends
  labels:
    app: mqtt-topic-tree
    component: frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: YOUR_FRONTEND_PORT
    targetPort: YOUR_FRONTEND_PORT
    protocol: TCP
  selector:
    app: mqtt-topic-tree
    component: frontend
